--- a/flappy_game/Cargo.toml
+++ b/flappy_game/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 bevy ={ version = "0.12.1", features = ["wayland"] }
 rand = "0.8.4"
+
+[profile.release]
+opt-level = 'z'
